fixed dockerfile issues